@@ -1,49 +1,69 @@
 package bunny.boardhole.shared.exception;
 
-import bunny.boardhole.shared.config.log.RequestLoggingFilter;
+import java.net.URI;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+
 import jakarta.servlet.http.HttpServletRequest;
-import org.junit.jupiter.api.*;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.slf4j.MDC;
-import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
+import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.*;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ProblemDetail;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.validation.*;
+import org.springframework.validation.BindingResult;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 
-import java.net.URI;
-import java.util.*;
+import bunny.boardhole.shared.config.log.RequestLoggingFilter;
+import bunny.boardhole.shared.properties.ProblemProperties;
+import bunny.boardhole.shared.util.MessageUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("GlobalExceptionHandler 테스트")
+@Tag("unit")
 class GlobalExceptionHandlerTest {
 
     private static final String TRACE_ID = "test-trace-id-123";
     private static final String REQUEST_PATH = "/api/test";
     private static final String REQUEST_METHOD = "POST";
-    @InjectMocks
+    
     private GlobalExceptionHandler handler;
-    @Mock
-    private MessageSource messageSource;
+    
     @Mock
     private HttpServletRequest request;
 
     @BeforeEach
     void setUp() {
+        // Create handler with test ProblemProperties
+        ProblemProperties problemProperties = new ProblemProperties("");
+        handler = new GlobalExceptionHandler(problemProperties);
+        
         LocaleContextHolder.setLocale(Locale.KOREAN);
         MDC.put(RequestLoggingFilter.TRACE_ID, TRACE_ID);
 
-        // Set problemBaseUri to empty string (will use urn format)
-        ReflectionTestUtils.setField(handler, "problemBaseUri", "");
+        // Initialize MessageUtils
+        ResourceBundleMessageSource messageSource = new ResourceBundleMessageSource();
+        messageSource.setBasename("messages");
+        messageSource.setDefaultEncoding("UTF-8");
+        messageSource.setUseCodeAsDefaultMessage(true);
+        ReflectionTestUtils.setField(MessageUtils.class, "messageSource", messageSource);
     }
 
     private void setupRequestMock() {
@@ -56,10 +76,8 @@ class GlobalExceptionHandlerTest {
     void handleNotFound() {
         // Given
         setupRequestMock();
-        String errorMessage = "게시글을 찾을 수 없습니다";
+        final String errorMessage = "게시글을 찾을 수 없습니다";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.not-found"), isNull(), any(Locale.class)))
-                .thenReturn("리소스를 찾을 수 없음");
 
         // When
         ProblemDetail result = handler.handleNotFound(ex, request);
@@ -71,9 +89,11 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:not-found"));
         assertThat(result.getInstance()).isEqualTo(URI.create(REQUEST_PATH));
         assertThat(result.getProperties()).containsKeys("path", "method", "timestamp", "traceId");
-        assertThat(result.getProperties().get("traceId")).isEqualTo(TRACE_ID);
-        assertThat(result.getProperties().get("path")).isEqualTo(REQUEST_PATH);
-        assertThat(result.getProperties().get("method")).isEqualTo(REQUEST_METHOD);
+        Map<String, Object> properties = result.getProperties();
+        assertThat(properties).isNotNull();
+        assertThat(properties.get("traceId")).isEqualTo(TRACE_ID);
+        assertThat(properties.get("path")).isEqualTo(REQUEST_PATH);
+        assertThat(properties.get("method")).isEqualTo(REQUEST_METHOD);
     }
 
     @Test
@@ -81,10 +101,8 @@ class GlobalExceptionHandlerTest {
     void handleConflict() {
         // Given
         setupRequestMock();
-        String errorMessage = "중복된 데이터입니다";
+        final String errorMessage = "중복된 데이터입니다";
         ConflictException ex = new ConflictException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.conflict"), isNull(), any(Locale.class)))
-                .thenReturn("데이터 충돌");
 
         // When
         ProblemDetail result = handler.handleConflict(ex, request);
@@ -94,7 +112,9 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getTitle()).isEqualTo("데이터 충돌");
         assertThat(result.getDetail()).isEqualTo(errorMessage);
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:conflict"));
-        assertThat(result.getProperties().get("code")).isEqualTo("CONFLICT");
+        Map<String, Object> conflictProperties = result.getProperties();
+        assertThat(conflictProperties).isNotNull();
+        assertThat(conflictProperties.get("code")).isEqualTo("CONFLICT");
     }
 
     @Test
@@ -102,10 +122,8 @@ class GlobalExceptionHandlerTest {
     void handleDuplicateUsername() {
         // Given
         setupRequestMock();
-        String errorMessage = "이미 사용 중인 사용자명입니다";
+        final String errorMessage = "이미 사용 중인 사용자명입니다";
         DuplicateUsernameException ex = new DuplicateUsernameException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.duplicate-username"), isNull(), any(Locale.class)))
-                .thenReturn("중복된 사용자명");
 
         // When
         ProblemDetail result = handler.handleDuplicateUsername(ex, request);
@@ -115,7 +133,9 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getTitle()).isEqualTo("중복된 사용자명");
         assertThat(result.getDetail()).isEqualTo(errorMessage);
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:duplicate-username"));
-        assertThat(result.getProperties().get("code")).isEqualTo("USER_DUPLICATE_USERNAME");
+        Map<String, Object> usernameProperties = result.getProperties();
+        assertThat(usernameProperties).isNotNull();
+        assertThat(usernameProperties.get("code")).isEqualTo("USER_DUPLICATE_USERNAME");
     }
 
     @Test
@@ -123,10 +143,8 @@ class GlobalExceptionHandlerTest {
     void handleDuplicateEmail() {
         // Given
         setupRequestMock();
-        String errorMessage = "이미 사용 중인 이메일입니다";
+        final String errorMessage = "이미 사용 중인 이메일입니다";
         DuplicateEmailException ex = new DuplicateEmailException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.duplicate-email"), isNull(), any(Locale.class)))
-                .thenReturn("중복된 이메일");
 
         // When
         ProblemDetail result = handler.handleDuplicateEmail(ex, request);
@@ -136,7 +154,9 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getTitle()).isEqualTo("중복된 이메일");
         assertThat(result.getDetail()).isEqualTo(errorMessage);
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:duplicate-email"));
-        assertThat(result.getProperties().get("code")).isEqualTo("USER_DUPLICATE_EMAIL");
+        Map<String, Object> emailProperties = result.getProperties();
+        assertThat(emailProperties).isNotNull();
+        assertThat(emailProperties.get("code")).isEqualTo("USER_DUPLICATE_EMAIL");
     }
 
     @Test
@@ -144,10 +164,8 @@ class GlobalExceptionHandlerTest {
     void handleUnauthorized() {
         // Given
         setupRequestMock();
-        String errorMessage = "인증이 필요합니다";
+        final String errorMessage = "인증이 필요합니다";
         UnauthorizedException ex = new UnauthorizedException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.unauthorized"), isNull(), any(Locale.class)))
-                .thenReturn("인증 실패");
 
         // When
         ProblemDetail result = handler.handleUnauthorized(ex, request);
@@ -157,7 +175,9 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getTitle()).isEqualTo("인증 실패");
         assertThat(result.getDetail()).isEqualTo(errorMessage);
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:unauthorized"));
-        assertThat(result.getProperties().get("code")).isEqualTo("UNAUTHORIZED");
+        Map<String, Object> unauthorizedProperties = result.getProperties();
+        assertThat(unauthorizedProperties).isNotNull();
+        assertThat(unauthorizedProperties.get("code")).isEqualTo("UNAUTHORIZED");
     }
 
     @Test
@@ -165,10 +185,8 @@ class GlobalExceptionHandlerTest {
     void handleAccessDenied() {
         // Given
         setupRequestMock();
-        String errorMessage = "접근 권한이 없습니다";
+        final String errorMessage = "접근 권한이 없습니다";
         AccessDeniedException ex = new AccessDeniedException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.access-denied"), isNull(), any(Locale.class)))
-                .thenReturn("접근 거부");
 
         // When
         ProblemDetail result = handler.handleAccessDenied(ex, request);
@@ -178,11 +196,13 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getTitle()).isEqualTo("접근 거부");
         assertThat(result.getDetail()).isEqualTo(errorMessage);
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:forbidden"));
-        assertThat(result.getProperties().get("code")).isEqualTo("FORBIDDEN");
+        Map<String, Object> forbiddenProperties = result.getProperties();
+        assertThat(forbiddenProperties).isNotNull();
+        assertThat(forbiddenProperties.get("code")).isEqualTo("FORBIDDEN");
     }
 
     @Test
-    @DisplayName("MethodArgumentNotValidException 처리 - 400 응답 with validation errors")
+    @DisplayName("MethodArgumentNotValidException 처리 - 422 응답 with validation errors")
     void handleMethodArgumentNotValid() {
         // Given
         setupRequestMock();
@@ -194,53 +214,46 @@ class GlobalExceptionHandlerTest {
 
         when(ex.getBindingResult()).thenReturn(bindingResult);
         when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError1, fieldError2));
-        when(messageSource.getMessage(eq("exception.title.validation-failed"), isNull(), any(Locale.class)))
-                .thenReturn("유효성 검증 실패");
 
         // When
         ResponseEntity<ProblemDetail> response = handler.handleInvalid(ex, request);
         ProblemDetail result = response.getBody();
 
         // Then
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY);
         assertThat(result).isNotNull();
-        assertThat(result.getStatus()).isEqualTo(HttpStatus.BAD_REQUEST.value());
+        assertThat(result.getStatus()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.value());
         assertThat(result.getTitle()).isEqualTo("유효성 검증 실패");
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:validation-error"));
-        assertThat(result.getProperties().get("code")).isEqualTo("VALIDATION_ERROR");
+        Map<String, Object> validationProperties = result.getProperties();
+        assertThat(validationProperties).isNotNull();
+        assertThat(validationProperties.get("code")).isEqualTo("VALIDATION_ERROR");
 
-        @SuppressWarnings("unchecked")
-        List<Map<String, Object>> errors = (List<Map<String, Object>>) result.getProperties().get("errors");
+        @SuppressWarnings("unchecked") List<Map<String, Object>> errors = (List<Map<String, Object>>) validationProperties.get("errors");
         assertThat(errors).hasSize(2);
-        assertThat(errors.get(0))
-                .containsEntry("field", "title")
-                .containsEntry("message", "제목을 입력해주세요")
-                .containsEntry("rejectedValue", "제목");
-        assertThat(errors.get(1))
-                .containsEntry("field", "content")
-                .containsEntry("message", "내용을 입력해주세요")
-                .containsEntry("rejectedValue", "");
+        assertThat(errors.getFirst()).containsEntry("field", "title").containsEntry("message", "제목을 입력해주세요").containsEntry("rejectedValue", "제목");
+        assertThat(errors.get(1)).containsEntry("field", "content").containsEntry("message", "내용을 입력해주세요").containsEntry("rejectedValue", "");
     }
 
     @Test
-    @DisplayName("IllegalArgumentException 처리 - 400 응답")
+    @DisplayName("IllegalArgumentException 처리 - 422 응답")
     void handleIllegalArgument() {
         // Given
         setupRequestMock();
-        String errorMessage = "잘못된 인자입니다";
+        final String errorMessage = "잘못된 인자입니다";
         IllegalArgumentException ex = new IllegalArgumentException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.bad-request"), isNull(), any(Locale.class)))
-                .thenReturn("잘못된 요청");
 
         // When
         ProblemDetail result = handler.handleBadRequest(ex, request);
 
         // Then
-        assertThat(result.getStatus()).isEqualTo(HttpStatus.BAD_REQUEST.value());
-        assertThat(result.getTitle()).isEqualTo("잘못된 요청");
+        assertThat(result.getStatus()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.value());
+        assertThat(result.getTitle()).isEqualTo("유효성 검증 실패");
         assertThat(result.getDetail()).isEqualTo(errorMessage);
-        assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:bad-request"));
-        assertThat(result.getProperties().get("code")).isEqualTo("BAD_REQUEST");
+        assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:validation-error"));
+        Map<String, Object> badRequestProperties = result.getProperties();
+        assertThat(badRequestProperties).isNotNull();
+        assertThat(badRequestProperties.get("code")).isEqualTo("VALIDATION_ERROR");
     }
 
     @Test
@@ -248,20 +261,20 @@ class GlobalExceptionHandlerTest {
     void handleDataIntegrityViolation() {
         // Given
         setupRequestMock();
-        String errorMessage = "데이터 무결성 위반";
+        final String errorMessage = "데이터 무결성 위반";
         DataIntegrityViolationException ex = new DataIntegrityViolationException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.conflict"), isNull(), any(Locale.class)))
-                .thenReturn("데이터 충돌");
 
         // When
-        ProblemDetail result = handler.handleConflict(ex, request);
+        ProblemDetail result = handler.handleDataIntegrityViolation(ex, request);
 
         // Then
         assertThat(result.getStatus()).isEqualTo(HttpStatus.CONFLICT.value());
         assertThat(result.getTitle()).isEqualTo("데이터 충돌");
-        assertThat(result.getDetail()).isEqualTo(errorMessage);
+        assertThat(result.getDetail()).isEqualTo("데이터 충돌이 발생했습니다"); // 보안상 일반 메시지
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:conflict"));
-        assertThat(result.getProperties().get("code")).isEqualTo("CONFLICT");
+        Map<String, Object> dataIntegrityProperties = result.getProperties();
+        assertThat(dataIntegrityProperties).isNotNull();
+        assertThat(dataIntegrityProperties.get("code")).isEqualTo("CONFLICT");
     }
 
     @Test
@@ -270,10 +283,6 @@ class GlobalExceptionHandlerTest {
         // Given
         setupRequestMock();
         Exception ex = new RuntimeException("Unexpected error");
-        when(messageSource.getMessage(eq("error.internal"), isNull(), any(Locale.class)))
-                .thenReturn("서버 내부 오류가 발생했습니다");
-        when(messageSource.getMessage(eq("exception.title.internal-error"), isNull(), any(Locale.class)))
-                .thenReturn("내부 서버 오류");
 
         // When
         ProblemDetail result = handler.handleUnexpected(ex, request);
@@ -283,7 +292,9 @@ class GlobalExceptionHandlerTest {
         assertThat(result.getTitle()).isEqualTo("내부 서버 오류");
         assertThat(result.getDetail()).isEqualTo("서버 내부 오류가 발생했습니다");
         assertThat(result.getType()).isEqualTo(URI.create("urn:problem-type:internal-error"));
-        assertThat(result.getProperties().get("code")).isEqualTo("INTERNAL_ERROR");
+        Map<String, Object> internalErrorProperties = result.getProperties();
+        assertThat(internalErrorProperties).isNotNull();
+        assertThat(internalErrorProperties.get("code")).isEqualTo("INTERNAL_ERROR");
     }
 
     @Test
@@ -291,14 +302,13 @@ class GlobalExceptionHandlerTest {
     void buildTypeWithBaseUri() {
         // Given
         setupRequestMock();
-        ReflectionTestUtils.setField(handler, "problemBaseUri", "https://api.boardhole.com/problems");
-        String errorMessage = "테스트 오류";
+        ProblemProperties problemProperties = new ProblemProperties("https://api.boardhole.com/problems");
+        GlobalExceptionHandler handlerWithBaseUri = new GlobalExceptionHandler(problemProperties);
+        final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class)))
-                .thenReturn("테스트 제목");
 
         // When
-        ProblemDetail result = handler.handleNotFound(ex, request);
+        ProblemDetail result = handlerWithBaseUri.handleNotFound(ex, request);
 
         // Then
         assertThat(result.getType()).isEqualTo(URI.create("https://api.boardhole.com/problems/not-found"));
@@ -309,14 +319,13 @@ class GlobalExceptionHandlerTest {
     void buildTypeWithBaseUriEndingWithSlash() {
         // Given
         setupRequestMock();
-        ReflectionTestUtils.setField(handler, "problemBaseUri", "https://api.boardhole.com/problems/");
-        String errorMessage = "테스트 오류";
+        ProblemProperties problemProperties = new ProblemProperties("https://api.boardhole.com/problems/");
+        GlobalExceptionHandler handlerWithBaseUri = new GlobalExceptionHandler(problemProperties);
+        final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class)))
-                .thenReturn("테스트 제목");
 
         // When
-        ProblemDetail result = handler.handleNotFound(ex, request);
+        ProblemDetail result = handlerWithBaseUri.handleNotFound(ex, request);
 
         // Then
         assertThat(result.getType()).isEqualTo(URI.create("https://api.boardhole.com/problems/not-found"));
@@ -328,10 +337,8 @@ class GlobalExceptionHandlerTest {
         // Given
         setupRequestMock();
         MDC.clear(); // Remove traceId
-        String errorMessage = "테스트 오류";
+        final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class)))
-                .thenReturn("테스트 제목");
 
         // When
         ProblemDetail result = handler.handleNotFound(ex, request);
@@ -345,11 +352,11 @@ class GlobalExceptionHandlerTest {
     @DisplayName("HttpServletRequest가 null일 때 처리")
     void handleWithNullRequest() {
         // Given
-        String errorMessage = "테스트 오류";
+        final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
 
-        // When
-        ProblemDetail result = handler.handleNotFound(ex, null);
+        // When - null request for testing null handling behavior
+        @SuppressWarnings("DataFlowIssue") ProblemDetail result = handler.handleNotFound(ex, null);
 
         // Then
         assertThat(result.getProperties()).containsKey("timestamp");
